# tiny-c_compiler

./: (Entrega 2) About Tiny-C.md  .gitignore  About Tiny-C.md  Cargo.toml  README.md
code_samples/: demo.tc  do_while_example.tc  function.tc  function_call.tc  inexistent_function.tc  math_functions.tc  recursive_func.tc  recursive_smaller.tc  unreachable_function.tc
code_samples/compile_cases/: add_2.tc  assignment_3.tc  do_while.tc  fn_decl.tc  fn_usage.tc  if.tc  if_else.tc  print_expr.tc  print_statics.tc  scope.tc  sum_expr.tc  while.tc
code_samples/parse_failures/: bad_paren.tc  bad_print.tc
code_samples/sema_failures/: duplicated_function.tc  inexistent_function.tc  unreachable_function.tc
src/: cli.yml  fuzzer.rs  main.rs  parser.rs  sema_analyzer.rs  settings.rs  tiny-c.pest
