
[package]
name = "tiny-c-parser"
version = "0.2.0"
authors = ["Félix Fischer <felix91gr@gmail.com>"]

[dependencies]

# For the construction of the parser
pest = "2.0"
pest_derive = "2.0"

# For command line argument parsing
clap = {version = "2.32", features = ["yaml"]}

[dev-dependencies]
# For fuzzing of the parser
synfuzz = "0.1.0"

# For formatting of big numbers
thousands = "0.1.2"

# [patch.crates-io]
# synfuzz = { path = '../synfuzz/synfuzz' }
