
[package]
name = "tiny-c-parser"
version = "0.3.0"
authors = ["Félix Fischer <felix91gr@gmail.com>"]

[dependencies]

# For the construction of the parser
pest = "2.0"
pest_derive = "2.0"

# For command line argument parsing
clap = {version = "2.32", features = ["yaml"]}

# For compiling to LLVM IR and Machine Code
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }

[dev-dependencies]
# For fuzzing of the parser
synfuzz = "0.1.0"

# For formatting of big numbers
thousands = "0.1.2"

# [patch.crates-io]
# synfuzz = { path = '../synfuzz/synfuzz' }
